--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-
-    <h1 class="text-uppercase"><strong>biggest startup event of the year</strong></h1>
-    <hr>
-    <button class="btn btn-primary btn-xl">Find out more!!!</button>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">
+        <h1 class="text-uppercase"><strong>biggest startup event of the year</strong></h1>
+        </header>
+        <div class="buffer col-12">
+        </div>
+        <section class="text-center">
+        <hr>
+        <a href="https://mailchi.mp/a13bca755431/startup"><button class="btn btn-primary btn-xl">Find out more!!!</button></a>
+      </section>
+      </div>
+    </div>
   </body>
 </html>
