--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">    
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet">
+    <!-- Animate StyleSheet -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-        <h1 class="text-uppercase"><strong>biggest startup event of the year</strong></h1>
+        <h1 class="text-uppercase animate__animated animate__zoomIn"><strong>biggest startup event of the year</strong></h1>
         </header>
         <div class="buffer col-12">
         </div>
