--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-        <h1 class="text-uppercase animate__animated animate__zoomIn"><strong>biggest startup event of the year</strong></h1>
+        <h1 class="text-uppercase animate__animated animate__fadeInDown"><strong>biggest startup event of the year</strong></h1>
         </header>
         <div class="buffer col-12">
         </div>
-        <section class="text-center">
+        <section class="text-center animate__animated animate__fadeInUp">
         <hr>
         <a href="https://mailchi.mp/a13bca755431/startup"><button class="btn btn-primary btn-xl">Find out more!!!</button></a>
       </section>
